--- a/templates/task/tasks_test.html
+++ b/templates/task/tasks_test.html
@@ -1,6 +1,8 @@
 {% extends '../base.html' %}
 {% load static %}
 {% block content %}
+<script src="https://unpkg.com/htmx.org"></script>
+
 <script src="{% static 'tinymce/tinymce.min.js' %}"></script>
 <style>
     .full-height {
