dynamic task ck list 90%

--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
             <!-- <a href="#" id="load-chat-btn">Load Chat Content</a> -->
 
             <li class="nav-item">
-                <a class="nav-link" href="">  <!-- id="load-tasks-btn" -->
+                <a class="nav-link" href="{% url 'all_tasks' %}">  <!-- id="load-tasks-btn" -->
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tasks</span></a>
             </li>
