--- a/templates/task/tasks_test.html
+++ b/templates/task/tasks_test.html
@@ -199,7 +199,7 @@
         opacity: 0.7;
     }
     #sidebarRight, #sidebarRight2 {
-        width: 45% !important;
+        width: 95% !important;
     }
 </style>
 <button class="btn btn-secondary position-fixed bottom-0 end-0 mb-5 me-3" id="transparent-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarRight" aria-controls="sidebarRight">
@@ -210,15 +210,14 @@
 <!-- Sidebar Content Create Task -->
 <div class="offcanvas offcanvas-end" tabindex="-1" id="sidebarRight" aria-labelledby="sidebarLabel">
     <div class="offcanvas-header">
-    <h5 id="sidebarLabel">Create Task</h5>
+    <h5 id="sidebarLabel">Create Tasksss</h5>
 
-    <a type="button" class="text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
+    <a type="butdton" class="text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
         <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
             <path d="M6 12.796V3.204L11.481 8zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753"/>
           </svg>
     </a>
-      
-      
+
     </div>
     <div class="offcanvas-body">
         <div class="container-fluid full-height">
