--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends './base.html' %}
 {% load static %}
-{% block content %}
 
+{% block content %}
 <script src="{% static 'tinymce/tinymce.min.js' %}"></script>
 <style>
     .full-height {
@@ -30,12 +30,10 @@
     .form-group {
         margin-bottom: 18px; /* Adds space between form groups */
     }
-
 </style>
 <div class="container-fluid full-height">
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h3>Tasks - ({{ task_count }})</h3>
-
         <div style="padding: 8px; border: solid 2px rgba(128, 128, 128, 0.438); border-radius: 5px; display: flex; align-items: center; justify-content: center;">
             <p id="timer" style="margin: 0; line-height: 1; padding-right: 12px; font-size: larger;"><b>25:00</b></p>
             <a href="" class="btn btn-danger btn-sm" id="toggleTimer">
@@ -90,48 +88,6 @@
         </a>
     </div>
     <hr>
-    <!-- <div class="row">
-        <div class="col-6 col-sm-3" >
-            <div class="card">
-                <div class="card-body" style="text-align: center;">
-                    <h1 id="timer" style="color: rgba(255, 0, 0, 0.589);">25:00</h1>
-                    <div class="d-flex">
-                        <audio id="start_button_click" src="{% static 'audio/start-button-click.mp3' %}" preload="auto"></audio>
-                        <button id="start_button" onclick="startCountdown()" class="btn btn-success form-control">Start</button>
-
-                        <audio id="clickSound" src="{% static 'audio/button-click.mp3' %}" preload="auto"></audio>
-                        <button id="toggleButton" onclick="pauseCountdown()" class="btn btn-danger form-control">Pause</button>
-
-
-                        <audio id="bellSound" src="{% static 'audio/bell-ring.mp3' %}"></audio>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <h6 class="card-title">Pure 40 HZ Binural Beats</h6>
-                            <audio controls class="w-100">
-                                <source src="{% static 'audio/Pure_40_HZ_Binural_Beats.mp3' %}" type="audio/mpeg">
-                            </audio>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="col">
-            <div class="card">
-                <div class="card-body">
-                    <div class="task-detail">
-                        <div class="spinner-grow text-primary" role="status">
-                        </div>
-                        <div class="spinner-grow text-secondary" role="status">
-                        </div> 
-                        <div class="spinner-grow text-success" role="status">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <div id="message"></div>
     <form class="sortable" hx-post="/items/" hx-trigger="end" hx-target="#message">
@@ -152,31 +108,37 @@
                 <!-- <h4>Not Started ({{ status_counts.NOT_STARTED }})</h4> -->
                 <hr>
                 <div id="not_started" class="status-list card-body overflow-auto" data-status="NOT_STARTED" data-bs-toggle="offcanvas" data-bs-target="#sidebarRight2" aria-controls="sidebarRight2">
-                    <div id="response">
-                        <!-- all the response here -->
-                    </div>
-                    {% for task in tasks %}
-                        {% if task.status == "NOT_STARTED" %}
-                        <div class="card mb-2 task-item" data-id="{{ task.id }}">
-                            <a href="javascript:void(0);" class="task-link" data-url="{% url 'items_detail' task.pk %}">
-                                <div class="card-body">
-                                    <input type='hidden' name='item' value='{{ task.id }}' />
-                                    <input type='hidden' name='status' value='{{ task.status }}' />
-                                    <b>
-                                        {% if task.title|length > 35 %}
-                                            {{ task.title|slice:"0:35" }}...
-                                        {% else %}
-                                            {{ task.title }}
-                                        {% endif %}
-                                    </b>
+                    {% if not form_submitted %}
+                        <!-- Display tasks normally for a fresh page load -->
+                        <div id="response">
+                            {% for task in tasks %}
+                                {% if task.status == "NOT_STARTED" %}
+                                <div class="card mb-2 task-item" data-id="{{ task.id }}">
+                                    <a href="javascript:void(0);" class="task-link" data-url="{% url 'items_detail' task.pk %}">
+                                        <div class="card-body">
+                                            <input type='hidden' name='item' value='{{ task.id }}' />
+                                            <input type='hidden' name='status' value='{{ task.status }}' />
+                                            <b>
+                                                {% if task.title|length > 35 %}
+                                                    {{ task.title|slice:"0:35" }}...
+                                                {% else %}
+                                                    {{ task.title }}
+                                                {% endif %}
+                                            </b>
+                                        </div>
+                                    </a>
                                 </div>
-                            </a>
+                                {% endif %}
+                            {% endfor %}
                         </div>
-                        {% endif %}
-                    {% endfor %}
+                    {% else %}
+                        <!-- Placeholder for HTMX updates. This will initially be empty and filled by HTMX after a form submission. -->
+                        <div id="response">
+                            <!-- Content replaced by HTMX on form submission -->
+                        </div>
+                    {% endif %}
                 </div>
             </div>
-
     
             <!-- IN_PROGRESS -->
             <div id="in_progress_body" class="card-body">
@@ -221,7 +183,6 @@
                         <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
                       </svg>
                 </div>
-                
                 <!-- <h4>Completed ({{ status_counts.COMPLETED }})</h4> -->
                 <hr>
                 <div id="COMPLETED" class="status-list card-body overflow-auto" data-status="COMPLETED" data-bs-toggle="offcanvas" data-bs-target="#sidebarRight2" aria-controls="sidebarRight2">
@@ -250,8 +211,6 @@
         </div>
     </form>
 </div>
-
-
 <style>
     .mb-5 {
         margin-bottom: 4rem !important; /* This is equivalent to 80px */
@@ -261,6 +220,11 @@
     }
     #sidebarRight, #sidebarRight2 {
         width: 45% !important;
+    }
+    @media all and (max-width: 768px) {
+        #sidebarRight, #sidebarRight2 {
+            width: 95% !important;
+        }
     }
 </style>
 <button class="btn btn-secondary position-fixed bottom-0 end-0 mb-5 me-3" id="transparent-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarRight" aria-controls="sidebarRight">
@@ -279,46 +243,25 @@
           </svg>
     </a>
       
-      
     </div>
     <div class="offcanvas-body">
         <div class="container-fluid full-height">
-                <form method="POST" hx-post="{% url 'home' %}" hx-target="#response" hx-swap="outerHTML">
-                    {% csrf_token %}
-                    {{ form_task.media }}
-                    <div class="form-group">
-                        {{ form_task.title }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_task.completion_time }}
-                    </div>
-                    {{ form_task.description }}
-                    <input type="submit" value="Save" class="btn btn-primary">
-                    <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
-                </form>
+            <form method="POST" hx-post="{% url 'home' %}" hx-target="#response" hx-swap="outerHTML">
+                {% csrf_token %}
+                {{ form_task.media }}
+                <div class="form-group">
+                    {{ form_task.title }}
+                </div>
+                <div class="form-group">
+                    {{ form_task.completion_time }}
+                </div>
+                {{ form_task.description }}
+                <input type="submit" value="Save" class="btn btn-primary">
+                <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
+            </form>
         </div>
     </div>
 </div>
-
-<script>
-    // document.addEventListener('DOMContentLoaded', function() {
-    //     document.getElementById('clearForm').addEventListener('click', function() {
-    //         // Find the form element
-    //         var form = this.closest('form');
-            
-    //         // Reset input and textarea fields
-    //         form.querySelectorAll('input[type="text"], input[type="datetime-local"], textarea').forEach(function(input) {
-    //             input.value = '';
-    //         });
-    
-    //         // Clear TinyMCE editor
-    //         if (tinyMCE.activeEditor) {
-    //             tinyMCE.activeEditor.setContent('');
-    //         }
-    //     });
-    // });
-</script>
-    
 
 <!-- Sidebar Content View Task -->
 <div class="offcanvas offcanvas-end" tabindex="-1" id="sidebarRight2" aria-labelledby="sidebarLabel">
@@ -327,21 +270,22 @@
     <a type="button" class="text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
         <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
             <path d="M6 12.796V3.204L11.481 8zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753"/>
-          </svg>
+        </svg>
     </a>
     </div>
     <div class="offcanvas-body">
         <div class="container-fluid full-height">
             <div class="task-detail">
-
                 <!-- task detail will display here (dynamicly loaded) -->
             </div>
         </div>
     </div>
 </div>
+
 <script src="https://unpkg.com/htmx.org"></script>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 <script>
     $(document).ready(function() {
         $('#id_description').summernote();
@@ -362,6 +306,7 @@
             });
         });
     });
+
     // This function is triggered when the page loads or when new content is loaded by htmx.
     htmx.onLoad(function (content) {
 
@@ -433,66 +378,5 @@
         const remainingSeconds = seconds % 60;
         return `${minutes}:${remainingSeconds < 10 ? '0' : ''}${remainingSeconds}`;
     }
-
-    function startCountdown() {
-
-        startButton();
-        // If timer is paused, resume it
-        if (isPaused) {
-            isPaused = false;
-            return;
-        }
-
-        // Clear any existing intervals
-        clearInterval(countdown);
-
-        // Reset timeLeft to 1500 seconds (25 minutes) if timer is not paused
-        if (!isPaused) {
-            timeLeft = 1500;
-            document.getElementById('timer').textContent = formatTime(timeLeft);
-        }
-
-        countdown = setInterval(function() {
-            if (isPaused) return;
-
-            timeLeft--;
-            document.getElementById('timer').textContent = formatTime(timeLeft);
-
-            if (timeLeft <= 0) {
-                clearInterval(countdown);
-                // Play the bell sound
-                document.getElementById('bellSound').play();
-                alert('Time is up!');
-            }
-        }, 1000);
-    }
-
-    function pauseCountdown() {
-        isPaused = !isPaused;
-
-        var sound = document.getElementById("clickSound");
-        var button = document.getElementById("toggleButton");
-
-        sound.play(); // Play the sound effect
-
-        if (button.innerHTML === "Pause") {
-            button.innerHTML = "Unpause";
-        } else {
-            button.innerHTML = "Pause";
-        }
-    }
-
-    function startButton() {
-        var sound = document.getElementById("start_button_click");
-        var button = document.getElementById("start_button");
-        sound.play();
-
-        if (button.innerHTML === "Start") {
-            button.innerHTML = "Started";
-        } else {
-            button.innerHTML = 'Start';
-        }
-    }
-
 </script>
 {% endblock %}
