--- a/templates/task/edit_task.html
+++ b/templates/task/edit_task.html
@@ -2,6 +2,21 @@
 {% load static %}
 
 {% block content %}
+<style>
+    .underline-input {
+        width: 100%; 
+        border: none;
+        border-bottom: 3px solid rgba(128, 128, 128, 0.486); 
+        box-shadow: none;
+        outline: none;
+        padding-bottom: 4px;
+        padding: 12px;
+        border-radius: 5px;
+    }
+    .form-group {
+        margin-bottom: 18px; 
+    }
+</style>
 <div class="container-fluid full-height">
     <div class="row">
         <div class="col">
@@ -14,10 +29,12 @@
             <form method="post">
                 {% csrf_token %}
                 {{ form.media }}
-                {{ form.title }}
-                <br>
-                {{ form.completion_time }}
-                <br>
+                <div class="form-group">
+                    {{ form.title }}
+                </div>
+                <div class="form-group">
+                    {{ form.completion_time }}
+                </div>
                 {{ form.description }}
                 <br>
                 <input type="submit" value="Save Changes" class="btn btn-primary">
