fix dynamic display

--- a/templates/base.html
+++ b/templates/base.html
@@ -338,7 +338,7 @@
                 </nav>
                 <!-- End of Topbar -->
                 <!-- Begin Page Content -->
-                <div class="container-fluid">
+                <div style="width: 100%;" class="">
                     <div id="chat-content"></div>
                     <div id="img-gen-content"></div>
                     <div id="tasks-content"></div>
