--- a/templates/home.html
+++ b/templates/home.html
@@ -253,6 +253,9 @@
                     {{ form_task.title }}
                 </div>
                 <div class="form-group">
+                    {{ form_task.completion_date }}
+                </div>
+                <div class="form-group">
                     {{ form_task.completion_time }}
                 </div>
                 {{ form_task.description }}
