--- a/templates/task/edit_task.html
+++ b/templates/task/edit_task.html
@@ -19,12 +19,15 @@
 </style>
 <div class="container-fluid full-height">
     <div class="row">
-        <div class="col">
+        <!-- Left Spacer Column -->
+        <div class="col-12 col-md-1">
             <div class="card-body">
-
+                <!-- Left spacer content (if any) -->
             </div>
         </div>
-        <div class="col-8">
+
+        <!-- Main Content Column -->
+        <div class="col-12 col-md-10">
             <h1>Edit task</h1>
             <form method="post">
                 {% csrf_token %}
@@ -33,7 +36,10 @@
                     {{ form.title }}
                 </div>
                 <div class="form-group">
-                    {{ form.completion_time }}
+                    {{ form_task.completion_date }}
+                </div>
+                <div class="form-group">
+                    {{ form_task.completion_time }}
                 </div>
                 {{ form.description }}
                 <br>
@@ -41,11 +47,14 @@
                 <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
             </form>
         </div>
-        <div class="col">
-            <div class="card-body">
 
+        <!-- Right Spacer Column -->
+        <div class="col-12 col-md-1">
+            <div class="card-body">
+                <!-- Right spacer content (if any) -->
             </div>
         </div>
     </div>
 </div>
+
 {% endblock %}
