--- a/templates/task_checklist/all_tasks.html
+++ b/templates/task_checklist/all_tasks.html
@@ -31,10 +31,9 @@
         display: flex;
         justify-content: flex-end;
     }
-    .task-link {
+    /* .task-link {
         margin-left: 30px;
-    }
-
+    } */
     .custom-col {
         flex: 0 0 auto;
         width: 25px;
@@ -49,6 +48,29 @@
     }
     .form-group {
         margin-bottom: 18px; /* Adds space between form groups */
+    }
+    #element-on-mobile {
+        display: none;
+    }
+    @media all and (max-width: 767px) {
+        #element {
+            visibility: hidden;
+            display: none;
+        }
+        #element-on-mobile {
+            display: block;
+        }
+    }
+    .flex-container {
+        display: flex;
+        align-items: center; /* Align items vertically in the center */
+        justify-content: flex-start; /* Align items horizontally to the start */
+    }
+    .flex-container svg {
+        margin-right: 8px; /* Add some space between the svg and the paragraph */
+    }
+    .flex-container p {
+        margin: 0; /* Remove default margins */
     }
 </style>
 <div class="my_day">
@@ -67,7 +89,6 @@
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-body">
-            
             <p style="color: red;"><b>WARNING:</b> <w style="color: black;">This will delete all your tasks permanently. Are you sure you want to proceed?"</w> </p>
             <form method="POST" action="{% url 'delete_all_tasks' %}">
                 {% csrf_token %}
@@ -78,7 +99,6 @@
                       </svg>
                 </button>
             </form>
-            
         </div>
     </div>
 </div>
@@ -89,26 +109,76 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Status</th>
+                    <th id="element" scope="col">Status</th>
                     <th scope="col">Title</th>
-                    <th scope="col">Date Created</th>
-                    <th scope="col">Actions</th>
-                    <th scope="col" style="width: 100px;" class="text-end"></th>
+                    <th id="element" scope="col">Date Created</th>
+                    <th id="element" scope="col">Actions</th>
+                    <th id="element" scope="col" style="width: 100px;" class="text-end"></th>
                 </tr>
             </thead>
             <tbody id="sortable-tbody">
                 <div>
                     {% for task in all_tasks %}
                         <tr>
-                            <td>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
-                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                                </svg>
-                            </td>
-                            <td class="task-link" data-bs-toggle="offcanvas" data-bs-target="#sidebarRight2" aria-controls="sidebarRight2" data-url="{% url 'items_detail' task.pk %}">{{ task.title }}</td>
-                            <td>{{ task.created_at }}</td>
-                            <td>{{ task.status }}</td>
-                            <td class="text-end">
+                            {% if task.status != 'COMPLETED' %}
+                                <td id="element">
+                                    <form action="{% url 'complete_task' task.id %}" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-link">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+                                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                            </svg>
+                                        </button>
+                                    </form>
+                                </td>
+                                <td>
+                                    <div class="flex-container">
+                                        <form action="{% url 'complete_task' task.id %}" method="post">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-link">
+                                                <svg id="element-on-mobile" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+                                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                                </svg> 
+                                            </button>
+                                        </form>
+                                        <p class="task-link" data-bs-toggle="offcanvas" data-bs-target="#sidebarRight2" aria-controls="sidebarRight2" data-url="{% url 'items_detail' task.pk %}">{{ task.title }}</p>
+                                    </div>
+                                </td>
+                            {% else %}
+                                <td id="element">
+                                    <form action="{% url 'complete_task' task.id %}" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-link">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
+                                                <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
+                                                <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
+                                              </svg>
+                                        </button>
+                                    </form>
+                                </td>
+                                <td>
+                                    <div class="flex-container">
+                                        <form action="{% url 'complete_task' task.id %}" method="post">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-link"> 
+                                                <svg id="element-on-mobile" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
+                                                    <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
+                                                    <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
+                                                  </svg>
+                                            </button>
+                                        </form>
+                                        <s class="task-link" data-bs-toggle="offcanvas" data-bs-target="#sidebarRight2" aria-controls="sidebarRight2" data-url="{% url 'items_detail' task.pk %}">{{ task.title }}</s>
+                                    </div>
+                                </td>
+                            {% endif %}
+                            
+                            <td id="element">{{ task.created_at }}</td>
+                            {% if task.status != 'COMPLETED' %}
+                                <td id="element"><span class="badge bg-info text-dark">{{ task.status }}</span></td>
+                            {% else %}
+                                <td id="element"><span class="badge bg-success text-dark">{{ task.status }}</span></td>
+                            {% endif %}
+                            <td id="element" class="text-end">
                                 <div class="link-container">
                                     <div class="dropdown">
                                         <button class="btn btn-link" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -132,16 +202,14 @@
                                                 </a>
                                             </li>
                                         </ul>
-                                        
                                     </div>
-                                    
                                 </div>
                             </td>
                         </tr>
                     {% empty %}
-                    <tr>
-                        <td colspan="4" class="text-center">No tasks found</td>
-                    </tr>
+                        <tr>
+                            <td colspan="4" class="text-center">No tasks found</td>
+                        </tr>
                     {% endfor %}
                 </div>
             </tbody>
@@ -195,6 +263,9 @@
                         {{ form_task.title }}
                     </div>
                     <div class="form-group">
+                        {{ form_task.completion_date }}
+                    </div>
+                    <div class="form-group">
                         {{ form_task.completion_time }}
                     </div>
                     {{ form_task.description }}
@@ -227,7 +298,6 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
-
 <script src="path/to/sortable.min.js"></script>
 
 <script>
@@ -277,7 +347,6 @@
             });
         });
     });
-
 </script>
 
 {% endblock %}
